# soma

./: .gitignore  README.md
soma/: CHANGELOG.rst  package.xml
soma2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma2_msgs/msg/: SOMA2Object.msg  SOMA2ROIObject.msg
soma_geospatial_store/: CHANGELOG.rst  package.xml
soma_io/: CHANGELOG.rst  package.xml
soma_llsd/: .gitignore  README.md
soma_llsd/soma_llsd/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma_llsd/soma_llsd/launch/: soma_llsd.launch
soma_llsd/soma_llsd/src/: server.py
soma_llsd/soma_llsd/src/tests/: test_auto_insert_scene.py  test_insert_scene.py  test_insert_segment.py
soma_llsd/soma_llsd/srv/: AddObservationsToSegment.srv  GetScene.srv  GetSegment.srv  InsertScene.srv  InsertSceneAuto.srv  InsertSegment.srv  UpdateSegment.srv
soma_llsd/soma_llsd_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma_llsd/soma_llsd_msgs/msg/: Observation.msg  Scene.msg  Segment.msg
soma_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma_manager/launch/: soma_local.launch  soma_remote.launch
soma_manager/msg/: SOMANewObjects.msg
soma_manager/scripts/: data_manager_node.py
soma_manager/src/query_manager/: query_manager.cpp  querybuilder.cpp  querybuilder.h
soma_manager/src/soma_manager/: data_manager.py  object_manager.py
soma_manager/srv/: SOMADeleteObjs.srv  SOMAInsertObjs.srv  SOMAInsertROIs.srv  SOMAQueryObjs.srv  SOMAQueryROIs.srv  SOMAUpdateObject.srv
soma_map_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma_map_manager/src/soma_map_manager/: soma_map.py
soma_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma_msgs/msg/: SOMAObject.msg  SOMAROIObject.msg  SOMATrajectory.msg
soma_objects/: CHANGELOG.rst  package.xml
soma_pcl_segmentation/: CHANGELOG.rst  package.xml
soma_roi_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
soma_roi_manager/scripts/: soma_roi_node.py
soma_roi_manager/src/soma_roi_manager/: soma_roi.py  soma_roi_drawer.py
soma_roi_manager/srv/: DrawROI.srv
soma_trajectory/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
soma_trajectory/scripts/: trajectory_importer.py  trajectory_visualisation.py  visualiser.py
soma_trajectory/src/soma_trajectory/: soma_trajectory_manager.py  visualisation.py
soma_trajectory/srv/: SOMAQueryTrajectories.srv
soma_utils/: CHANGELOG.rst  package.xml
soma_visualizer/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
soma_visualizer/include/: mainwindow.h  querybuilder.h  rosThread.h  somaobjectdetaildialog.h  somaobjecttableviewmodel.h  util.h
soma_visualizer/launch/: soma_visualizer.launch
soma_visualizer/src/: main.cpp  mainwindow.cpp  querybuilder.cpp  rosThread.cpp  somaobjectdetaildialog.cpp  somaobjecttableviewmodel.cpp
soma_visualizer/ui/: mainwindow.ui  somaobjectdetaildialog.ui
